--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
         </div>
         <div class="time-period">
           <div class="time-period-btn">
-            <button>Daily</button>
-            <button class="active">Weekly</button>
-            <button>Monthly</button>
+            <h3>Daily</h3>
+            <h3 class="active">Weekly</h3>
+            <h3>Monthly</h3>
+            <!-- <button class="active">Weekly</button>
+            <button>Monthly</button> -->
           </div>
         </div>
       </div>
@@ -129,7 +131,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Moris Mwai</a>.
   </div>
 </body>
 </html>
